[workspace]
members = [
    "driver",
    "kernel",
    "libsupervisionary",
    "system-interface",
    "tests/constant",
    "tests/system",
    "tests/term",
    "tests/theorem",
    "tests/type",
    "tests/type_former",
    "wasmi-bindings"
]

[profile.release]
lto           = true
opt-level     = 3
codegen-units = 1
