[package]
name        = "constant"
version     = "0.1.0"
authors     = ["Dominic Mulligan"]
edition     = "2018"
description = "Tests of the constant ABI."

[dependencies]
libsupervisionary = {path = "../../libsupervisionary"}

[profile.release]
lto           = true
opt-level     = 3
codegen-units = 1